Partial_14Dec2021/force-app/main/default/objects/Inventory_Request__c/Inventory_Request__c.object-meta.xml
<CustomObject>
    <label>Inventory Request</label>
    <nameField>
        <displayFormat>IR-{0000}</displayFormat>
        <label>Inventory Request  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>