Partial_14Dec2021/force-app/main/default/objects/Inventory_Request__c/fields/Comments_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Comments_Remarks__c</fullName>
    <inlineHelpText>Enter the Reason</inlineHelpText>
    <label>Comments/Remarks</label>
    <type>TextArea</type>
</CustomField>