Partial_14Dec2021/force-app/main/default/objects/Inventory_Request__c/fields/inventory_mega__c.field-meta.xml
<CustomField>
    <fullName>inventory_mega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>inventory_mega</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>inventory__c.Type__c</field>
            <operation>equals</operation>
            <value>GIFT ITEMS</value>
        </filterItems>
        <filterItems>
            <field>inventory__c.Type_Of_Meet__c</field>
            <operation>equals</operation>
            <value>Mega Meet</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>inventory__c</referenceTo>
    <relationshipLabel>Inventory Requests (inventory_mega)</relationshipLabel>
    <relationshipName>Inventory_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>