Partial_14Dec2021/force-app/main/default/objects/Inventory_Request__c/fields/inventory_PackMaterials__c.field-meta.xml
<CustomField>
    <fullName>inventory_PackMaterials__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>inventory_PackMaterials</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>inventory__c.Type__c</field>
            <operation>equals</operation>
            <value>PACKING MATERIALS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>inventory__c</referenceTo>
    <relationshipLabel>Inventory Requests (inventory_PackMaterials)</relationshipLabel>
    <relationshipName>Inventory_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>