Partial_14Dec2021/force-app/main/default/objects/Inventory_Request__c/fields/Inventory_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Request_Number__c</fullName>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Inventory Requests</relationshipLabel>
    <relationshipName>Inventory_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>