Partial_14Dec2021/force-app/main/default/objects/Inventory_Request__c/fields/inventory_Sample__c.field-meta.xml
<CustomField>
    <fullName>inventory_Sample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>inventory_Sample</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>inventory__c.Type__c</field>
            <operation>equals</operation>
            <value>SAMPLES</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>inventory__c</referenceTo>
    <relationshipLabel>Inventory Requests (inventory_Sample)</relationshipLabel>
    <relationshipName>Inventory_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>