Partial_14Dec2021/force-app/main/default/objects/Inventory_Request__c/fields/Quantity_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Dispatched__c</fullName>
    <label>Quantity Dispatched</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>