Partial_14Dec2021/force-app/main/default/objects/Inventory_Request__c/fields/Request_Rasied_by__c.field-meta.xml
<CustomField>
    <fullName>Request_Rasied_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Raised by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>