Partial_14Dec2021/force-app/main/default/objects/Inventory_Request__c/fields/Required_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Required_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Required Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>