Partial_14Dec2021/force-app/main/default/objects/Inventory_Request__c/fields/Type_of_Item__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Type of Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>inventory__c.Owner_Account__c</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <filterItems>
            <field>inventory__c.Type__c</field>
            <operation>equals</operation>
            <value>GIFT ITEMS</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>inventory__c</referenceTo>
    <relationshipLabel>Inventory Requests</relationshipLabel>
    <relationshipName>Inventory_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>